Issue 2951: Fixed tag bleeding in collage.

--- a/public/stylesheets/collages.css
+++ b/public/stylesheets/collages.css
@@ -21,12 +21,13 @@
 #collage .description .buttons ul .btn-a span { float:left; display:inline; padding-right:14px; background:url(/images/ui/collage-hgroup-btn-arrow.png) right no-repeat; }
 #collage .description .buttons ul .btn-a-active span { background-image:url(/images/ui/collage-hgroup-btn-active.png); }
 
-#collage .details { background:#e0f5bd; display:block; position:relative; padding:7px 300px 11px 74px; height:100%; z-index:1; }
-#collage .details .tags { position:absolute; top:1px; right:1px; text-align: right; }
-#collage .details .tags a { display:inline-block; padding:5px 11px; color:#376100; background:#c4eb80; font-size: 10px; }
+#collage .details { background:#e0f5bd; display:block; position:relative; padding:7px 1px 7px 74px; height:100%; z-index:1; }
+#collage .details .tags { float: right; text-align: right; width: 300px; }
+#collage .details .tags a { display:inline-block; padding:5px 11px; color:#376100; background:#c4eb80; font-size: 10px; margin-bottom: 2px; }
 #collage .details .influence { padding-bottom:9px; }
 #collage .details .influence label { float:left; display:inline; font-size:9px; line-height:16px; color:#666; font-weight:bold; padding-right:8px; }
 #collage .details h5 { font-size:10px; line-height:1.8em; font-weight:normal; padding-bottom:2px; }
+#collage .details .clear { clear: both; }
 
 #collage article { opacity: 0.0; font-size:11px; line-height:1.5em;
   color:#000; padding:13px 9px 0 35px; height:100%; font-family: Verdana, Arial, Helvetica, sans-serif; }
